--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,13 +14,8 @@
   "plugins": ["react", "prettier"],
   "rules": {
     "prettier/prettier": ["error", { "singleQuote": true, "parser": "flow" }],
-    "no-unused-vars": "warn",
-    "no-console": "off",
-    "func-names": "off",
-    "no-process-exit": "off",
-    "object-shorthand": "off",
-    "class-methods-use-this": "off",
     "react/react-in-jsx-scope": "off",
-    "react/jsx-filename-extension": "off"
+    "react/jsx-filename-extension": "off",
+    "no-console": ["error", { "allow": ["warn", "error"] }]
   }
 }
